<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_new_shipment"

        android:title="@string/send_items" />

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/ic_track_shipment"
        android:title="@string/track_items" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help_users" />
    <!--
           android:id="@+id/navigation_logout"
           -->
    <item

    android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_history"
        android:title="@string/logout_user" />




</menu>