<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"

                android:layout_height="50dp"
                android:layout_margin="10dp"

                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"

                android:layout_height="30dp"
                android:layout_marginLeft="10dp" >

                <Button
                    android:id="@+id/button2"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="#ffffff"

                    android:drawableRight="@drawable/ic_baseline_keyboard_arrow_left_24"
                    android:textColor="#D91F2B"
                    android:textSize="54sp" />


                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="-12dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:text="Sign up"
                    android:visibility="gone"
                    android:textSize="17sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/send_restriction"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"

                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="-40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"

                    android:background="@xml/button_review_white"
                    android:text="Sending Restrictions "

                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#D91F2B" />




            </LinearLayout>

                <!-- Image draw line -->

                <!--
            <LinearLayout
                android:id="@+id/linearLayout_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageViewName"
                    android:layout_width="68dp"
                    android:layout_height="4dp"

                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="2dp"
                    android:background="#ffffff"
                    android:src="@drawable/line_indicator_green" />

                <ImageView
                    android:id="@+id/imageEmail"
                    android:layout_width="68dp"
                    android:layout_height="4dp"

                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="2dp"
                    android:background="#ffffff"
                    android:src="@drawable/line_indicator_ash" />

                <ImageView
                    android:id="@+id/imagePwd"
                    android:layout_width="75dp"
                    android:layout_height="4dp"

                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="2dp"
                    android:background="#ffffff"
                    android:src="@drawable/line_indicator_ash" />

                <ImageView
                    android:id="@+id/imageAddress"
                    android:layout_width="68dp"
                    android:layout_height="4dp"

                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="2dp"
                    android:background="#ffffff"
                    android:src="@drawable/line_indicator_ash"/>

            </LinearLayout>
-->
<!-- Text line starts here -->
            <LinearLayout
                android:id="@+id/linearLayout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                android:id="@+id/lev1"
                android:layout_width="match_parent"

                    android:importantForAutofill="no"

                    android:layout_weight="1"
                android:layout_marginTop="0dp"

                android:textSize="14sp"
                    android:textColor="@color/colorGreen"
                android:ems="10"

                    android:background="@drawable/line_indicator_green"
                    android:layout_height="41dp"
                    android:paddingBottom="0dp"
                    android:inputType="textPersonName"
                    android:gravity="bottom|center"
                android:text="Name" />


                <TextView
                    android:id="@+id/lev2"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:paddingBottom="0dp"

                    android:importantForAutofill="no"

                    android:gravity="bottom|center"
                    android:layout_weight="1"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAsh"
                    android:textSize="14sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/line_indicator_ash"
                    android:text="Email" />



                <TextView
                    android:id="@+id/lev3"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:paddingBottom="0dp"
                    android:gravity="bottom|center"

                    android:importantForAutofill="no"

                    android:layout_weight="1"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAsh"
                    android:textSize="14sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/line_indicator_ash"
                    android:text="Password" />

                <TextView
                    android:id="@+id/lev4"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:paddingBottom="0dp"
                    android:gravity="bottom|center"

                    android:importantForAutofill="no"

                    android:layout_weight="1"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAsh"
                    android:textSize="14sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/line_indicator_ash"
                    android:text="Address" />

            </LinearLayout>













            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:ems="10"

                    android:importantForAutofill="no"


                    android:text="What is your Name ?" />

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:textSize="14sp"
                        android:ems="10"
                        android:text=" * denote mandatory" />

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"

                        android:importantForAutofill="no"

                        android:text="Title:*" />
                    <Spinner
                        android:id="@+id/spinner3"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="20px"
                        android:background="@xml/spinner_style"
                        android:prompt="@string/select3" />



                    <TextView
                        android:id="@+id/fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:ems="10"

                        android:importantForAutofill="no"

                        android:text="First Name:*" />
                    <EditText

                        android:id="@+id/txtFname"
                        android:layout_width="fill_parent"


                        android:layout_height="match_parent"

                        android:layout_marginTop="2dp"
                        android:layout_weight="2.65"
                        android:background="@xml/text_style"
                        android:ems="10"
                        android:gravity="top"
                        android:hint="First Name"

                        android:inputType="text"
                        android:minHeight="15dp"
                        android:padding="10dp"
                        android:text=""
                        android:textColor="#000000"
                        android:textColorHint="#C1C1C1" />

                    <TextView
                        android:id="@+id/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:ems="10"

                        android:importantForAutofill="no"

                        android:text="Surname:*" />
                    <EditText
                        android:id="@+id/txtSurname"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:background="@xml/text_style"

                        android:ems="10"
                        android:gravity="top"
                        android:hint="Surname"
                        android:inputType="text"

                        android:minHeight="15dp"
                        android:padding="10dp"

                        android:text=""

                        android:textColor="#000000"
                        android:textColorHint="#C1C1C1" />


                    <RadioGroup
                        android:id="@+id/radio_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2.65"
                        android:contentDescription="Status"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender" />

                        <RadioButton
                            android:id="@+id/radioNegative"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:checked="true"
                            android:text="@string/radio_negative" />


                        <RadioButton
                            android:id="@+id/radioPositive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/radio_positive" />

                    </RadioGroup>


                    <Button
                        android:id="@+id/butReg"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"

                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"

                        android:background="@drawable/background_botton"
                        android:text="Next"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>